ui: Make images not overflow in /solve by setting their max-width

--- a/ui/css/pages/solve.css
+++ b/ui/css/pages/solve.css
@@ -174,6 +174,10 @@
   line-height: 1.4em;
 }
 
+.text-container img {
+  max-width: 100%;
+}
+
 .extended-answer {
   display: flex;
   flex-direction: column;
